# SymMatika

./: CMakeLists.txt  LICENSE  README.md  initialize_model.cpp  initialize_model.h  main.cpp  model.cpp  model.h
cmake/: dependencies.cmake  optimizations.cmake
evolution/: genetic_algorithm.cpp  genetic_algorithm.h  genetic_operations.cpp  genetic_operations.h  motif_finder.cpp  motif_finder.h
fitness_core/: differentiation.cpp  differentiation.h  evaluate_tree.cpp  evaluate_tree.h  fitness.cpp  fitness.h
tree_construction/: build_candidates.cpp  build_candidates.h  generate_population.cpp  generate_population.h
